# Project_AI_WorkFlow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deployment/: docker-compose.yml
deployment/k8s/: deployment.yaml  service.yaml
docs/: api_contract.md  data_dictionary.md  modeling_assumptions.md  project_overview.md
monitoring/: data_drift.py  model_performance.py
notebooks/: 01_data_exploration_and_requirements.ipynb
src/: __init__.py
src/api/: app.py  routes.py
src/config/: settings.py
src/features/: feature_builder.py
src/forecasting/: baseline.py  classical_models.py  ml_models.py
src/ingestion/: data_loader.py  data_validator.py
src/models/: base_model.py  evaluate.py  predict.py  train.py
src/preprocessing/: aggregation.py  cleaning.py  time_features.py
src/services/: forecast_service.py
src/utils/: helpers.py  logger.py
tests/: test_features.py  test_ingestion.py  test_models.py  test_preprocessing.py
